[package]
name = "getrec-sandbox-whip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.35.0", features = ["full"] }
webrtc = { version = "0.8.0" }
# webrtc = { version = "0.9.0" }
