[package]
name = "getrec-sandbox-whip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.4"
aws-sdk-s3 = "1.14.0"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.33"
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
str0m = "0.4.1"
stunclient = "0.4.0"
systemstat = "0.2.3"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }

# [profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = "symbols"